--- a/templates/reports/report.html
+++ b/templates/reports/report.html
@@ -302,6 +302,45 @@
   
       // Mostra a aba atual
       const target = document.getElementById(`tab-content-${tab}`);
+      if (tab === 'numerico') {
+  setTimeout(() => {
+    const campos = [
+      '#id_height',
+      '#id_weight',
+      '#id_measurement_7afa3a2b-d414-4fa0-8d82-b941f3f7db36',
+      '#id_measurement_c5326b50-bf6c-46f7-bbec-15748bee04c4',
+      '#id_measurement_690b176b-8163-4ce4-82d7-8df8e9df6050',
+      '#id_measurement_846611f4-8e53-4487-83cd-1ca680a2bd48',
+      '#id_measurement_ea1bd53d-a826-4815-972e-a2801a1b99e0'
+    ];
+
+    campos.forEach(selector => {
+      const input = document.querySelector(selector);
+      if (input && !input.dataset.htmxListenerAttached) {
+        input.addEventListener('input', () => {
+          requestAnimationFrame(() => {
+            enviarCalculosDerivadosParaBackend();
+          });
+        });
+        input.dataset.htmxListenerAttached = "true";
+      }
+    });
+  }, 100);
+}
+
+if (tab === 'descritivo') {
+  setTimeout(() => {
+    const campos = document.querySelectorAll('#tab-content-descritivo textarea');
+    campos.forEach(el => {
+      if (!el.dataset.htmxListenerAttached) {
+        el.addEventListener('input', () => {
+          requestAnimationFrame(enviarResumoParaBackend);
+        });
+        el.dataset.htmxListenerAttached = "true";
+      }
+    });
+  }, 100);
+}
       target.classList.remove('hidden');
   
       // Atualiza o estilo das tabs
@@ -332,30 +371,6 @@
     }
 });
     }
-    
-    // Ativar o evento nos campos de interesse
-    document.addEventListener('DOMContentLoaded', function () {
-      const campos = [
-        '#id_height',
-        '#id_weight',
-        '#id_measurement_7afa3a2b-d414-4fa0-8d82-b941f3f7db36',
-        '#id_measurement_c5326b50-bf6c-46f7-bbec-15748bee04c4',
-        '#id_measurement_690b176b-8163-4ce4-82d7-8df8e9df6050',
-        '#id_measurement_846611f4-8e53-4487-83cd-1ca680a2bd48',
-        '#id_measurement_ea1bd53d-a826-4815-972e-a2801a1b99e0',
-      ];
-    
-        campos.forEach(selector => {
-    const input = document.querySelector(selector);
-    if (input) {
-      input.addEventListener('input', () => {
-        requestAnimationFrame(() => {
-          enviarCalculosDerivadosParaBackend();
-        });
-      });
-  }
-});
-    });
     </script>
 
   <script>
