--- a/templates/reports/report.html
+++ b/templates/reports/report.html
@@ -353,19 +353,30 @@
 
   <script>
     function enviarCalculosDerivadosParaBackend() {
+    const height = document.getElementById('id_height')?.value || '';
+    const weight = document.getElementById('id_weight')?.value || '';
+    const diastole_final_ve = document.getElementById('id_measurement_7afa3a2b-d414-4fa0-8d82-b941f3f7db36')?.value || '';
+    const sistole_final_ve = document.getElementById('id_measurement_c5326b50-bf6c-46f7-bbec-15748bee04c4')?.value || '';
+    const septo = document.getElementById('id_measurement_690b176b-8163-4ce4-82d7-8df8e9df6050')?.value || '';
+    const parede_posterior = document.getElementById('id_measurement_846611f4-8e53-4487-83cd-1ca680a2bd48')?.value || '';
+    const atrio_esquerdo = document.getElementById('id_measurement_ea1bd53d-a826-4815-972e-a2801a1b99e0')?.value || '';
+
+    // Verifica se todos os campos estão preenchidos antes de enviar
+    if (!height || !weight || !diastole_final_ve || !sistole_final_ve || !septo || !parede_posterior || !atrio_esquerdo) return;
+
     htmx.ajax('POST', '/reports/calcular-derivados/', {
-    target: '#resultado-derivado',
-    swap: 'outerHTML',
-    values: {
-      height: document.getElementById('id_height')?.value || '',
-      weight: document.getElementById('id_weight')?.value || '',
-      diastole_final_ve: document.getElementById('id_measurement_7afa3a2b-d414-4fa0-8d82-b941f3f7db36')?.value || '',
-      sistole_final_ve: document.getElementById('id_measurement_c5326b50-bf6c-46f7-bbec-15748bee04c4')?.value || '',
-      septo: document.getElementById('id_measurement_690b176b-8163-4ce4-82d7-8df8e9df6050')?.value || '',
-      parede_posterior: document.getElementById('id_measurement_846611f4-8e53-4487-83cd-1ca680a2bd48')?.value || '',
-      atrio_esquerdo: document.getElementById('id_measurement_ea1bd53d-a826-4815-972e-a2801a1b99e0')?.value || ''
-    }
-});
+      target: '#resultado-derivado',
+      swap: 'outerHTML',
+      values: {
+        height,
+        weight,
+        diastole_final_ve,
+        sistole_final_ve,
+        septo,
+        parede_posterior,
+        atrio_esquerdo
+      }
+    });
     }
     </script>
 
@@ -493,6 +504,10 @@ document.querySelectorAll('.manual-measurement').forEach(input => {
         }
       });
       
+      // Verifica se todos os campos estão preenchidos antes de enviar
+      const allFilled = Object.values(values).every(val => val && val.trim() !== '');
+      if (!allFilled) return;
+
       document.getElementById('tab-content-resumo').classList.remove('hidden');
 
       htmx.ajax('POST', '/reports/resumo-parcial/', {
